--- a/packages/shared/axios-config/package.json
+++ b/packages/shared/axios-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo/axios-config",
+  "name": "@psb/axios-config",
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT",
