--- a/packages/app-expo/package.json
+++ b/packages/app-expo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo/app-expo",
+  "name": "@psb/app-expo",
   "version": "1.0.0",
   "main": "__generated__/AppEntry.js",
   "scripts": {
