--- a/package.json
+++ b/package.json
@@ -16,13 +16,28 @@
     "sbui": "yarn workspace @psb/sbui",
     "sbui:start": "yarn sbui start",
     "sbui:build": "yarn sbui build",
-    "sbui:commit": "yarn sbui commit",
+    "sbui:lint": "yarn sbui lint",
+    "webpsb": "yarn workspace @psb/webpsb",
+    "webpsb:dev": "yarn webpsb dev",
+    "webpsb:build": "yarn webpsb build",
+    "lint": "eslint --ignore-path .eslintignore .",
     "test": "jest"
   },
+  "peerDependencies": {
+    "@psb/eslint-config": "*"
+  },
   "devDependencies": {
-    "@psb/eslint-config": "*",
     "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.23.0",
+    "@typescript-eslint/parser": "^4.23.0",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^7.26.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.23.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^26.6.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4",
