fix(webpsb): correção de nome do webpsb
O nome do workspace estava incorreto.

--- a/packages/webpsb/package.json
+++ b/packages/webpsb/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "@psb/wegbpsb",
+  "name": "@psb/webpsb",
   "version": "1.0.0",
   "main": "index.ts",
 
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint --ignore-path .eslintignore ."
   },
   "dependencies": {
     "next": "latest",
