--- a/packages/sbui/package.json
+++ b/packages/sbui/package.json
@@ -18,6 +18,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@psb/eslint-config": "*",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
